--- a/src/containers/SignIn.css
+++ b/src/containers/SignIn.css
@@ -1,9 +1,12 @@
 .sign-in-form {
   position: absolute;
   display: flex;
+  top: 30%;
+  left: 35%;
+  padding: 1em;
+  border-radius: 1em;
   flex-direction: column;
-  top: .2em;
-  margin: 0 1em;
+  background-color: rgba(33, 33, 33, .8);
 }
 
 .sign-in-form input {
@@ -12,7 +15,7 @@
   margin: .2em 0;
   border-radius: 8px;
   border: 0;
-  font-size: .9em;
+  font-size: 1.5em;
 }
 
 .sign-in-form button {
@@ -20,5 +23,5 @@
   border: 0;
   border-radius: 8px;
   margin: .2em 0;
-  font-size: 1em;
+  font-size: 1.5em;
 }
