--- a/src/containers/Header.css
+++ b/src/containers/Header.css
@@ -6,6 +6,7 @@
   padding: 1em;
   border: 0;
   border-radius: 1em 0 0 1em;
+  font-family: sans-serif;
 }
 
 .favorites {
@@ -13,6 +14,7 @@
   background-color: #006992;
   color: #CFD8DC;
   border: 0;
+  font-family: sans-serif;
 }
 
 .log-out {
@@ -20,6 +22,7 @@
   background-color: #27476E;
   color: #CFD8DC;
   border: 0;
+  font-family: sans-serif;
 }
 
 .sign-in-sign-up {
@@ -37,6 +40,7 @@
   padding: 1em;
   border: 0;
   border-radius: 1em 0 0 1em;
+  font-family: sans-serif;
 }
 
 .signup {
@@ -46,4 +50,5 @@
   margin: 0;
   padding: 1em;
   border: 0;
+  font-family: sans-serif;
 }
