--- a/src/containers/MoviesContainer.css
+++ b/src/containers/MoviesContainer.css
@@ -13,6 +13,10 @@
   margin: 1em;
 }
 
+.movie-container h3 {
+  margin: .5em 0;
+}
+
 .movie-container div button {
   background-color: #212121;
   border: 1px solid darkorange;
