--- a/src/containers/SignUp.css
+++ b/src/containers/SignUp.css
@@ -6,7 +6,8 @@
   padding: 1em;
   border-radius: 1em;
   flex-direction: column;
-  background-color: rgba(33, 33, 33, .8);
+  background-color: rgba(33, 33, 33, .9);
+  border: 1px solid darkorange;
 }
 
 .sign-up input {
@@ -24,6 +25,7 @@
   border-radius: 8px;
   margin: .2em 0;
   font-size: 1.5em;
+  font-family: sans-serif;
 }
 
 .user-message {
